# perfectpay-generate-QrCodePix

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
config/: config.py
generate/: qrcode_pix.py
