[project]
name = "perfectpay-generate-qrcodepix"
version = "0.1.0"
description = "Atomação para geração de QRCode PIX na plataforma PerfectPay"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cuid>=0.4",
    "python-dotenv>=1.1.1",
    "requests>=2.31.0",
    "selenium>=4.15.0",
    "Pillow>=10.0.0",
]
